Adding trainng startegy

--- a/trains.ipynb
+++ b/trains.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "47ea8346",
+   "metadata": {},
+   "source": [
+    "### Installing Important liabraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4bcc4e04",
@@ -11,13 +19,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7c85fe0",
+   "metadata": {},
+   "source": [
+    "### Preparing datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "49c8740a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from training.data_loader import train_loader"
+    "from training.data_loader import train_loader,val_loader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a93d8b6",
+   "metadata": {},
+   "source": [
+    "### Loading Model\n"
    ]
   },
   {
@@ -53,6 +77,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0c74c96",
+   "metadata": {},
+   "source": [
+    "### Start training\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d98784fd",
@@ -64,79 +96,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28dec45d",
+   "metadata": {},
+   "source": [
+    "## Seeing Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "96d9e55a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import infrance,importlib\n",
-    "importlib.reload(infrance)\n",
-    "from infrance import text_to_token_ids,token_ids_to_text,get_tokenizer\n",
     "\n",
-    "tokenn= get_tokenizer()"
+    "from infrance import generate_text\n",
+    "\n",
+    "generate_text(model,context)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e95599f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idss=text_to_token_ids(\"aman babu is good\",tokenn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "334c2f8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "token_ids_to_text(idss,tokenn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c41e2a7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbda6ac4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for _ in range(1):\n",
-    "        idx_cond = idss[-1:]\n",
-    "        with torch.inference_mode():\n",
-    "          \n",
-    "            print(idx_cond)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8042ff6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31a112dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
